# AWingAlliance

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  behavior1.xml  run.sh  scenario1.json
.github/workflows/: cmake.yml
Models/: awing.mtl  cube.mtl  hangar.mtl  tie.mtl  tie_bomber.mtl  tie_interceptor.mtl
Shaders/: color.frag  fbo.frag  fbo.vert  filter.glsl  hyperspace.frag  hyperspace.vert  object.frag  object.vert  sky.frag  sky.vert  spark.frag  terrain.frag  terrain.vert
Textures/: camera_back.tga  camera_front.tga  camera_side.tga
data/: descriptions.yaml  scenario.yaml
data/models/: arrow.mtl  awing.mtl  medfrigate.mtl  sd.mtl  sd_geometry.blend  sd_geometry.mtl  show_extents.py  tie.mtl  unit_vector.mtl
data/shaders/: hyperspace.vert  hyperspace_jump.frag  hyperspace_tunnel.frag  model.frag  model.vert  sky.vert  spark.frag  spline.frag  spline.geom  spline.vert
data/urdf/: awing.urdf  tie.urdf
examples/: CMakeLists.txt  control_example.cpp  fire_control_example.cpp  hyperspace_example.cpp  hyperspace_fsm_example.cpp  lqr_example.cpp  motionstate_control_example.cpp  ompl_example.cpp  scribbles.cpp
include/: actor.h  bezier.h  convenience.h  fbo.h  fighter.h  game_state.h  geometry.h  helpfunctions.h  keyboard.h  keyboard_constants.h  loader_utils.h  loaders.h  model.h  objloader.h  parser.h  renderer.h  scene.h  shaders.h  ship_controller.h  skybox.h  spline.h  terrain.h  tinyobj_helper.h  utils.h
include/TSBK07/: GL_utilities.h  LoadTGA.h  loadobj.h
include/actor/: actor.h  billboard.h  camera.h  laser.h  ship.h
include/audio/: audio.h  audio_manager.h
include/behavior/: nodes.h  ship_controller.h
include/behavior/nodes/: face_target.h  is_alive.h  roam_towards_destination.h  runnable_action_node.h  set_roaming_destination.h  set_target.h  tumble.h
include/control/: camera_controller.h  fire_control.h  lqr.h  motion_control.h  motion_model.h  orientation_controller.h  position_controller.h  realistic_motion_model.h  ship_controller.h  velocity_controller.h
include/ecs/: components.h  resource_manager.h  scene.h  scene_factory.h  systems.h
include/environment/: environment.h
include/geometry/: collision.h  geometry.h  spline.h
include/input/: key_event.h
include/rendering/: compile_shader_program.h  context_manager.h  convenience.h  draw.h  mesh.h  model.h  primitives.h  rendering_manager.h  shader_program.h  texture.h
include/resources/: description_data.h  geometry_data.h  load_descriptions.h  load_geometry.h  load_model.h  load_textfile.h  load_texture.h  locator.h.in  mesh_data.h  texture_data.h
include/sm/: roaming_state_machine.h
include/urdf/: fighter_input.h  fighter_model.h  parsing.h  parsing_utils.h
scripts/: bezier.py
src/: CMakeLists.txt  actor.cpp  fbo.cpp  fighter.cpp  game_state.cpp  geometry.cpp  keyboard.cpp  loaders.cpp  main.cpp  main2.cpp  model.cpp  objloader.cpp  parser.cpp  renderer.cpp  scene.cpp  shaders.cpp  ship_controller.cpp  skybox.cpp  spline.cpp  terrain.cpp
src/TSBK07/: loadobj.c
src/actor/: actor.cpp  billboard.cpp  camera.cpp  fighter.cpp  laser.cpp  ship.cpp
src/audio/: audio.cpp  audio_manager.cpp
src/behavior/: nodes.cpp  ship_controller.cpp
src/behavior/nodes/: face_target.cpp  is_alive.cpp  roam_towards_destination.cpp  runnable_action_node.cpp  set_roaming_destination.cpp  set_target.cpp  tumble.cpp
src/control/: camera_controller.cpp  fire_control.cpp  lqr.cpp  motion_control.cpp  motion_model.cpp  orientation_controller.cpp  position_controller.cpp  ship_controller.cpp  velocity_controller.cpp
src/ecs/: components.cpp  resource_manager.cpp  scene.cpp  scene_factory.cpp  systems.cpp
src/environment/: environment.cpp
src/geometry/: collision.cpp  geometry.cpp  spline.cpp
src/rendering/: compile_shader_program.cpp  context_manager.cpp  draw.cpp  mesh.cpp  model.cpp  primitives.cpp  rendering_manager.cpp  shader_program.cpp  texture.cpp
src/resources/: load_descriptions.cpp  load_geometry.cpp  load_model.cpp  load_textfile.cpp  load_texture.cpp
src/sm/: roaming_state_machine.cpp
src/urdf/: fighter_input.cpp  parsing.cpp  parsing_utils.cpp
